--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "globals": "^15.11.0",
     "prettier": "^3.3.3"
   }
 }
